Fix submit button alignment

--- a/style.css
+++ b/style.css
@@ -237,12 +237,8 @@ input[placeholder]::placeholder {
 }
 
 input[type="submit"] {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-weight: 600;
   width: 130px;
-  padding: 18px;
   margin-top: 35px;
   margin-bottom: 35px;
   border: none;
